/**
 * Created by zhengfh on 2018/8/7
 *
 * @author zhengfh
 **/
package xyz.zpath.java.netty.client.service.impl;

import xyz.zpath.java.netty.client.service.MessageService;
import xyz.zpath.java.rpc.protobuf.RpcNode;

/**
 * @author zhengfh
 * @date 2018/8/7
 **/
public class MessageServiceImpl implements MessageService {

    @Override
    public RpcNode.MessageResult getMessage(RpcNode.MessageRequest request) {
        return null;
    }
}
